Dr. Schott's corrections for Conclusions and Methodology done. Started background corrections...

--- a/Methodology.tex
+++ b/Methodology.tex
@@ -647,7 +647,7 @@ where $a$, $b$, $c$ and $d$ are the constants contained in the LUT for a large n
 
 Similar to the single-scattering approach, the assumption of negligible $\rho_w$ in the NIR allows us to determine the quantities $\rho_a(\lambda_s)+\rho_{ra}(\lambda_s)$ and $\rho_a(\lambda_l)+\rho_{ra}(\lambda_l)$ in the NIR. Once these quantities are determined from the sensor-measured values, the $\rho_{as}(\lambda)$ values for the NIR bands are estimated from these quantities using the LUT. Furthermore, because $\rho_{as}(\lambda)$ depends on aerosol phase function, single-scattering albedo, and optical thickness, this value can be computed for each aerosol model. Then, the \gls{sse}  values (described in \S\ref{subsubsec:singlescat}) for the NIR bands (i.e. $\varepsilon(\lambda_s,\lambda_l)$) can be calculated from the single-scattering reflectance values for each aerosol model and the measured values using \autoref{eq:espilon}. 
 
-In order to determine multiple-scattering values in the VIS, the most appropriate aerosol models are selected by comparing the SSE computed from the sensor-measured values with the ones computed from each aerosol model. This is accomplished in the following fashion. After deriving $\varepsilon(\lambda_s,\lambda_l)$, the next step is to estimate $\varepsilon(\lambda_i,\lambda_l)$. $\varepsilon(\lambda_s,\lambda_l)$ mostly falls between those for two of the $N$ aerosol models. Therefore, $\varepsilon(\lambda_i,\lambda_l)$ is assumed to fall between the same two aerosol models proportionately in the same manner as $\varepsilon(\lambda_s,\lambda_l)$. Then, \autoref{eq:rholambda_i} is used to estimate single-scattering value in the rest of the bands from $\rho_{as}(\lambda_l)$. 
+In order to determine multiple-scattering values in the VIS, the most appropriate aerosol models are selected by comparing the SSE computed from the sensor-measured values with the ones computed from each aerosol model. This is accomplished in the following fashion. After deriving $\varepsilon(\lambda_s,\lambda_l)$, the next step is to estimate $\varepsilon(\lambda_i,\lambda_l)$. $\varepsilon(\lambda_s,\lambda_l)$ falls between those for two of the $N$ aerosol models. Therefore, $\varepsilon(\lambda_i,\lambda_l)$ is assumed to fall between the same two aerosol models proportionately in the same manner as $\varepsilon(\lambda_s,\lambda_l)$. Then, \autoref{eq:rholambda_i} is used to estimate single-scattering value in the rest of the bands from $\rho_{as}(\lambda_l)$. 
 
 Finally, the LUT is used to transform single-scattering to multiple-scattering values to obtain $\rho_{am}(\lambda)$ and using \autoref{eq:rhoam} to obtain $\rho_w(\lambda)$. 
 
@@ -659,8 +659,8 @@ A summary of the method developed by \cite{Gordon:1994} is described below.
   \item Assuming water-leaving reflectances for NIR bands are equal to zero, set multiple-scattering aerosol reflectances $\rho_{am}(\lambda_s)$ and $\rho_{am}(\lambda_l)$ equal to Rayleigh-corrected reflectances.
   \item Using the aerosol LUTs, calculate the corresponding single-scattering aerosol value at the two NIR bands, i.e. $\rho_{as}(\lambda_s)$ and $\rho_{as}(\lambda_l)$. Then, calculate the corresponding SSE.
   \item For each $N$ aerosol, compute the single-scattering value using \autoref{eq:rhoas}. Calculate corresponding SSE.
-  \item Select the best two aerosol model by comparing the retrieved SSE with the theoretical SSE and determine the interpolation ratio between them.
-  \item For the optimal aerosol model use the tabulated $\varepsilon(\lambda)$ in the VIS and $\varepsilon(\lambda_l)$ to obtain $\rho_{as}(\lambda)$ and then $\rho_{am}(\lambda)$ in the VIS using \autoref{eq:rholambda_i} and LUT.
+  \item Select the best two aerosol models by comparing the retrieved SSE with the theoretical SSE and determine the interpolation ratio between them.
+  \item For the optimal aerosol model use the tabulated $\varepsilon(\lambda)$ in the VIS and $\varepsilon(\lambda_l)$ to obtain $\rho_{as}(\lambda)$ and then $\rho_{am}(\lambda)$ in the VIS using \autoref{eq:rholambda_i} and the LUT.
   \item Remove $\rho_{am}(\lambda)$ in the VIS from $\rho_c(\lambda)$ and divide by the corresponding atmospheric transmittance that corresponds to the best aerosol model to return $\rho_w(\lambda)$ in the VIS using \autoref{eq:rhoam}.
 \end{enumerate}
 
@@ -700,7 +700,7 @@ and
 
 Once these aerosol reflectances $\rho_{am}(\lambda_s)$ and $\rho_{am}(\lambda_l)$ are determined, they can be used in the standard algorithm, described in the previous section (instead of $\rho_c(\lambda_s)$ and $\rho_c(\lambda_l)$) to derive $\rho_w(\lambda)$ in the VIS.
 
-\cite{Ruddick:2000bs} suggested to determine the calibration parameter $\varepsilon_m(\lambda_s,\lambda_l)$ by inspection of the scatterplot between the Rayleigh-corrected reflectance $\rho_c$ in the NIR bands, as shown in \autoref{fig:ruddickplot}. This assumption is only valid for small scale space, where the aerosol type varies only weakly in space. As for the calibration parameter $\alpha$, \cite{Ruddick:2000bs} set it to a default value of $1.72$, which is a first-order estimate from a greatly simplified ocean color model. The derivation can be seen in \cite{Ruddick:2000bs} and will not be explained here.
+\cite{Ruddick:2000bs} suggested to determine the calibration parameter $\varepsilon_m(\lambda_s,\lambda_l)$ by inspection of the scatterplot between the Rayleigh-corrected reflectance $\rho_c$ in the NIR bands, as shown in \autoref{fig:ruddickplot}. This assumption is only valid for a small scale space, where the aerosol type varies only weakly in space. As for the calibration parameter $\alpha$, \cite{Ruddick:2000bs} set it to a default value of $1.72$, which is a first-order estimate from a greatly simplified ocean color model. The derivation can be seen in \cite{Ruddick:2000bs} and will not be explained here.
 
 The process is summarized as follows:
 
@@ -735,10 +735,11 @@ For Case 2 or high productive Case 1 waters, especially turbid waters, there is 
 
 % ------------------------------
 \subsection{OLI Algorithm for Case 2 Waters (Blue Band)}
+\label{subsec:blueband}
 \index{atmospheric correction!Gerace's blue band}
-\cite{GeraceThesis} proposed to use a combination of spectral matching and band ratio techniques (method developed by \cite{Gordon:1994}) to atmospherically correct OLI data over Case 2 waters. A requirement to use this technique for atmospherically correct OLI data is $\varepsilon^{(1,6)}\cong constant$, or in other words the ratio of reflectance from OLI's band 1 (coastal band) and band 6 (SWIR 1 band) should be approximately constant for all water pixels in the region of interest. Due to variability in band 1, the previous requirement is not always true. However, this variability can be accounted using spectral matching. This method needs to be applied with caution as it will not work in highly turbid water due to high variability in band 1. Therefore, an {\it a priori} analysis of the band histogram is needed, and only the bands whose histogram has little spread and resemble a normal distribution should be used \cite{GeraceThesis}.
+\cite{GeraceThesis} proposed to use a combination of spectral matching and band ratio techniques (method developed by \cite{Gordon:1994}) to atmospherically correct OLI data over Case 2 waters. A requirement to use this technique for atmospherically correcting OLI data is $\varepsilon^{(1,6)}\cong constant$, or in other words the ratio of reflectance from OLI's band 1 (coastal band) and band 6 (SWIR 1 band) should be approximately constant for all water pixels in the region of interest. Due to variability in band 1, the previous requirement is not always true. However, this variability can be accounted using spectral matching. This method needs to be applied with caution as it will not work in highly turbid water due to high variability in band 1. Therefore, an {\it a priori} analysis of the band histogram is needed, and only the bands whose histogram has little spread and resemble a normal distribution should be used \cite{GeraceThesis}.
 
-This method first uses a forwarding modeling to create a three dimensional (3-D) LUT. Then, it adds atmospheric visibility as a fourth dimension (4-D). First, a 3-D LUT is created using Hydrolight. The dimensions are concentration of chlorophyll-{\it a}, suspended particles and CDOM. The range of the LUT is made up of spectral water-leaving reflectances. Then, this 3-D reflectance LUT is propagated to the TOA using MODTRAN for a range of visibilities. Therefore, the 4-D LUT will be made up of the independent variables chlorophyll-{\it a}, suspended particles, CDOM and visibility, while the range will be made up of spectral sensor-reaching radiances. A diagram showing the concept of this 4-D LUT is shown in \autoref{fig:4DLUT}. Note that this approach requires some knowledge of the aerosol type (e.g. rural, urban, maritime, etc.). Furthermore, the sensor-reaching radiances should be spectrally sampled by the OLI's sensor response and the data from the image should corrected for glint effect before comparing with the 4-D LUT since it does not include this effect.
+This method first uses a forwarding modeling to create a three dimensional (3-D) LUT. Then, it adds atmospheric visibility as a fourth dimension (4-D). First, a 3-D LUT is created using Hydrolight. The dimensions are concentration of chlorophyll-{\it a}, suspended particles and CDOM. The range of the LUT is made up of spectral water-leaving reflectances. Then, this 3-D reflectance LUT is propagated to the TOA using MODTRAN for a range of visibilities. Therefore, the 4-D LUT will be made up of the independent variables chlorophyll-{\it a}, suspended particles, CDOM and visibility, while the range will be made up of spectral sensor-reaching radiances. A diagram showing the concept of this 4-D LUT is shown in \autoref{fig:4DLUT}. Note that this approach requires some knowledge of the aerosol type (e.g. rural, urban, maritime, etc.). Furthermore, the sensor-reaching radiances should be spectrally sampled by the OLI's sensor response and the data from the image should be corrected for glint effect before comparing with the 4-D LUT since it does not include this effect.
 
 \begin{figure}[htb]
   \centering
@@ -747,9 +748,9 @@ This method first uses a forwarding modeling to create a three dimensional (3-D)
   \label{fig:4DLUT} 
 \end{figure}
 % \todo{change figure for a better quality}
-Once the 4-D LUT has been created, an iterative search of the closest match to an imaged water pixel is performed. The first step in this iteration is to obtain an initial guess of the visibility. To do so an imaged spectrum is compared to the spectra contained in the 4-D LUT. The parameters (concentration of CPAs and visibility) associated to the closest non-interpolated spectrum in the 4-D LUT in a RMS sense are associated with the imaged spectrum. Then, these associated parameters are fixed and the observed $\varepsilon^{(1,6)}$ is compared with the 4-D LUT $\varepsilon^{(1,6)}$ values for different visibility but same concentration, and the visibility of the closest match is selected as initial visibility estimate.
+Once the 4-D LUT has been created, an iterative search of the closest match to an imaged water pixel is performed. The first step in this iteration is to obtain an initial guess of the visibility. To do so an imaged spectrum is compared to the spectra contained in the 4-D LUT. The parameters (concentration of CPAs and visibility) associated to the closest non-interpolated spectrum in the 4-D LUT in a RMS sense are associated with the imaged spectrum. Then, these associated parameters are fixed and the observed $\varepsilon^{(1,6)}$ is compared with the 4-D LUT $\varepsilon^{(1,6)}$ values for different visibility but the same concentration, and the visibility of the closest match is selected as the initial visibility estimate.
 
-After estimating the initial visibility, an optimization routine can be used to estimate the four parameters from the 4-D LUT by interpolation. The final result of this process are interpolated CPA's concentration and visibility associated with the imaged pixel.
+After estimating the initial visibility, an optimization routine can be used to estimate the four parameters from the 4-D LUT by interpolation. The final results of this process are interpolated CPA's concentration and visibility associated with the imaged pixel.
 
 \cite{GeraceThesis} suggested using an average of all visibility solutions obtained previously as a fixed visibility and repeat the estimation described above with this fixed visibility. This is because the atmosphere should not have a high variability in the scene and therefore be approximately constant over the study region.
 
@@ -766,10 +767,11 @@ Enter the algorithm with glint corrected data:\\
 
 % ------------------------------
 \subsection{OLI Algorithm for Case 2 Waters (Band Ratios)}
+\label{subsec:bandratios}
 \index{atmospheric correction!Gerace's band ratios}
 Another algorithm suggested by \cite{GeraceThesis} uses the concept adopted by \cite{Ruddick:2000bs}, but using OLI's NIR (band 5) and SWIR 1 (band 6) bands instead of the two NIR bands used for SeaWiFS. This algorithm utilizes the concept of band ratios (using the epsilon ratio values) in its implementation for calculating the reflectance due to aerosol in the scene. Recall from \cite{Ruddick:2000bs} that we would like $\varepsilon^{(i,j)}$ to be constant over the region of interest, for some band $i$ and band $j$. 
 
-For this algorithm specifically, the requirement should be $\varepsilon^{(5,6)}\cong constant$. If this is the case for any two bands in the scene, then a band ratio technique (\S\ref{subsec:gordon}, \S\ref{subsec:ruddick} and \S\ref{subsec:wang}) can be used to solve for $\rho_w$ in \autoref{eq:rhoam}. However, the requirement of $\varepsilon^{(5,6)}\cong constant$ could not be true for turbid waters because there are some signal coming from the water in the NIR and not only from the atmosphere, i.e. $\rho_w^{(5)}\neq0$. This fact produces variability in the water reflectance in band 5. Therefore, simply calculating $\varepsilon^{(5,6)}$ will result in a misrepresentation of the atmosphere and the water signal. A solution to this problem is to select the signal in band 5 (NIR band; $862nm$) from a region of dark waters, and make the black pixel assumption in the band 6. This will allow to calculate $\varepsilon^{(5,6)}$ over a dark water and therefore determine its atmosphere signal, i.e. the \cite{Ruddick:2000bs} approach adapted to the SWIR region. Then, the whole water scene is assumed to have the chosen atmosphere, the image is atmospherically correct for that atmosphere. The details of this algorithm are similar to the ones described in \cite{Ruddick:2000bs} (see \S\ref{subsec:ruddick}), and summarized below.
+For this algorithm specifically, the requirement should be $\varepsilon^{(5,6)}\cong constant$. If this is the case for any two bands in the scene, then a band ratio technique (\S\ref{subsec:gordon}, \S\ref{subsec:ruddick} and \S\ref{subsec:wang}) can be used to solve for $\rho_w$ in \autoref{eq:rhoam}. However, the requirement of $\varepsilon^{(5,6)}\cong constant$ could not be true for turbid waters because there is some signal coming from the water in the NIR and not only from the atmosphere, i.e. $\rho_w^{(5)}\neq0$. This fact produces variability in the water reflectance in band 5. Therefore, simply calculating $\varepsilon^{(5,6)}$ will result in a misrepresentation of the atmosphere and the water signal. A solution to this problem is to select the signal in band 5 (NIR band; $862nm$) from a region of dark waters, and make the black pixel assumption in the band 6. This will allow one to calculate $\varepsilon^{(5,6)}$ over dark water and therefore determine its atmosphere signal, i.e. the \cite{Ruddick:2000bs} approach adapted to the SWIR region. Then, the whole water scene is assumed to have the chosen atmosphere, the image is atmospherically corrected for that atmosphere. The details of this algorithm are similar to the ones described in \cite{Ruddick:2000bs} (see \S\ref{subsec:ruddick}), and summarized below.
 
 \noindent{\bf Summary:}
 Enter the algorithm with glint corrected data:\\
@@ -779,7 +781,9 @@ Enter the algorithm with glint corrected data:\\
 \noindent{\bf Step 4:} Extrapolate the determined model to all wavelengths using interpolation ratio. \\
 \noindent{\bf Step 5:} Globally correct the scene for the atmospheric effect. \\
 
-
+% ------------------------------
+\subsection{Concluding Remarks}
+\todo{Dr. Schott: check paragraph!}The developed \gls{mobelm} atmospheric correction described in \S\ref{subsec:mobelm} is used to test the methodology. The atmospheric correction algorithms based on \cite{Gordon:1994} are used to compare with the developed algorithm, but they are applied directly from the \gls{seadas} and \gls{acolite} tools. Finally, the algorithm proposed by \cite{GeraceThesis} (\S\ref{subsec:blueband} and \S\ref{subsec:bandratios}) are not used, and they were described here for reference.
 % @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
 \section{In-Water Constituent Retrieval Process}
 \label{sec:retrieval}
@@ -787,7 +791,7 @@ The retrieval algorithm will be based on previous work done by \cite{Raqueno:200
 % -------------------------------------
 \subsection{LUT generation}
 \label{subsec:LUTgen}
-The \gls{lut} is generated in Ecolight \cite{MobleyHE} for different triplets of water constituent concentrations (CPAs). Ecolight was used in the same fashion as in the black pixel determination for the MoB-ELM algorithm (\S\ref{subsubsec:blackpixel}). As an example, \autoref{tab:LUTconc2} shows the different parameters used to create a LUT in Ecolight. Two different sets of {\it in situ} IOPs (mass-specific absorption and scattering coefficient spectra) were used, one set for modeling the open lake conditions (low concentration of CPAs) and one set for modeling the pond condition (high concentration of CPAs). These IOPs are labeled in \autoref{tab:LUTconc2} as ``ONTNS'' for the open lake conditions and as ``LONGS'' for the pond conditions. \autoref{tab:LUTconc2} also shows the CPAs concentration used to create the LUT in Ecolight, where $C_a$ is the chlorophyll-{\it a} concentration, \acrfull{tss}, $a_{CDOM}(440)$ is the CDOM absorption coefficient at the wavelength $\lambda=440nm$. Furthermore, discretized Fournier-Forand phase function with four different \acrfull{b_boverb} values ($0.5$, $1.0$, $1.5$ and $2.0\%$) were used to account for the backscattering variability in the scene.
+The \gls{lut} is generated in Ecolight \cite{MobleyHE} for different triplets of water constituent concentrations (CPAs). Ecolight was used in the same fashion as in the black pixel determination for the MoB-ELM algorithm (\S\ref{subsubsec:blackpixel}). As an example, \autoref{tab:LUTconc2} shows the different parameters used to create a LUT in Ecolight. Two different sets of {\it in situ} IOPs (mass-specific absorption and scattering coefficient spectra) were used, one set for modeling the open lake conditions (low concentration of CPAs) and one set for modeling the pond condition (high concentration of CPAs). These IOPs are labeled in \autoref{tab:LUTconc2} as ``ONTNS'' for the open lake conditions and as ``LONGS'' for the pond conditions. \autoref{tab:LUTconc2} also shows the CPAs concentration used to create the LUT in Ecolight, where $C_a$ is the chlorophyll-{\it a} concentration, \acrfull{tss}, $a_{CDOM}(440)$ is the CDOM absorption coefficient at the wavelength $\lambda=440nm$. Furthermore, discretized Fournier-Forand phase functions with four different \acrfull{b_boverb} values ($0.5$, $1.0$, $1.5$ and $2.0\%$) were used to account for the backscattering variability in the scene.
 
 
 \begin{table}[htb]
@@ -854,11 +858,11 @@ with $x$ a vector. \texttt{lsqnonlin} tries to minimize the function
 \begin{equation}
   \underset{x}{min}\parallel f(x) \parallel^2_2=\underset{x}{min}(f_1(x)^2+f_2(x)^2+f_3(x)^2+...+f_m(x)^2)
 \end{equation}
-In this case, $x$ is the three CPA concentrations and the function $f(x)$ is the difference between the water spectra $R_{rs}$ for each pixel and an estimated curve $F$ from the LUT, this is
+In this case, $x$ includes the three CPA concentrations and the function $f(x)$ is the difference between the water spectra $R_{rs}$ for each pixel and an estimated curve $F$ from the LUT, this is
 \begin{equation}
   f = R_{rs} - F
 \end{equation}
-where $F$ is obtained from a trilinear interpolation based in the CPA concentrations of the LUT. The dimension $m$ is the number of bands. In other words, for each pixel in the image, \texttt{lsqnonlin} tries to find a function that minimizes the error between the measured value and an interpolated spectra from the LUT. \texttt{lsqnonlin} stops the search after reaching certain threshold. 
+where $F$ is obtained from a trilinear interpolation based in the CPA concentrations of the LUT. The dimension $m$ is the number of bands. In other words, for each pixel in the image, \texttt{lsqnonlin} tries to find a function that minimizes the error between the measured value and an interpolated spectra from the LUT. \texttt{lsqnonlin} stops the search after reaching a certain threshold. 
 
 The output of this process is a concentration mapping for each water constituent that spans the range of constituents levels in the scene. 
 
@@ -884,7 +888,7 @@ The area of study for this research is the Lake Ontario Rochester Embayment (lat
 \end{figure}
 % -------------------------------------------------------------
 \subsection{Comparison with {\it in situ} data}
-A field collection that includes water samples and remote-sensing reflectance ($R_{rs}$) measurements was conducted at the same time as the sensor overpass. The $R_{rs}$ measurements were performed using either the spectroradiometers SVC HR-1024i  \cite{SVCHR1024i} or ASD FieldSpec 4 \cite{ASDManual2012} following the method described by \cite{Mobley:1999} for measuring $R_rs$ from three consecutive measurements: the spectra of the downwelling irradiance $E_d$, the surface reflected sky radiance $L_s$, and the water-leaving radiance $L_w$ for each site (see Appendix~\ref{ch:fieldmea} for more details about the water samples collection and the $R_{rs}$ measurements). Then, the water samples were analyzed in the lab, following SeaWiFS protocols described in \cite{Mueller1995} for obtaining chlorophyll-{\it a} concentration ($C_a$) and total suspended solid concentration (TSS) (see Appendix~\ref{ch:labmea} for more details about the lab measurements). \autoref{tab:Sites} shows the different site names, location and the $C_a$ and $TSS$ for each site for the collection on 09-19-2013, as example. Note the difference in concentration levels between the ponds (i.e. LONGN, LONGS and CRANB) and the lake (i.e. ONTNS, ONTOS and ONTEX) samples.
+A field collection that includes water samples and \gls{rrs} measurements was conducted at the same time as the sensor overpass. The $R_{rs}$ measurements were performed using either the spectroradiometers SVC HR-1024i  \cite{SVCHR1024i} or ASD FieldSpec 4 \cite{ASDManual2012} following the method described by \cite{Mobley:1999} for measuring \gls{rrs} from three consecutive measurements: the spectra of the downwelling irradiance $E_d$, the surface reflected sky radiance $L_s$, and the water-leaving radiance $L_w$ for each site (see Appendix~\ref{ch:fieldmea} for more details about the water samples collection and the $R_{rs}$ measurements). Then, the water samples were analyzed in the lab, following SeaWiFS protocols described in \cite{Mueller1995} for obtaining chlorophyll-{\it a} concentration ($C_a$) and total suspended solid concentration (TSS) (see Appendix~\ref{ch:labmea} for more details about the lab measurements). \autoref{tab:Sites} shows the different site names, location and the $C_a$ and $TSS$ for each site for the collection on 09-19-2013, as example. Note the difference in concentration levels between the ponds (i.e. LONGN, LONGS and CRANB) and the lake (i.e. ONTNS, ONTOS and ONTEX) samples.
 
 % Site  & $C_a$  &    Latitude  & Longitude
 % ONTNS &   ~~0.48 &  43.272159 & -77.538274  
@@ -942,6 +946,6 @@ Additionally, this study presents a comparison of chlorophyll-{\it a} concentrat
 
 % ----------------------------------------------------
 \section{Concluding Remarks}
-The purpose of this chapter was to introduce the methodology required to achieve the objectives defined in the Chapter \S\ref{ch:objectives}. First, we began by explaining the different atmospheric correction techniques that will be investigated in this research along with the solar-glint removal algorithm. These atmospheric correction techniques include two different approaches. The first approach are methods applied to ocean color satellites. The second one is the MoB-ELM method. The in-water constituent retrieval process was presented. The LUT generation and the metrics used to perform the retrieval were described. Additionally, the ground truth data collection was briefly explained. Finally, how the results will be validated was described. 
+The purpose of this chapter was to introduce the methodology required to achieve the objectives defined in the Chapter \ref{ch:objectives}. First, we began by explaining the different atmospheric correction techniques that will be investigated in this research along with the solar-glint removal algorithm. These atmospheric correction techniques include two different approaches. The first approach are methods applied to ocean color satellites. The second one is the MoB-ELM method. The in-water constituent retrieval process was presented. The LUT generation and the metrics used to perform the retrieval were described. Additionally, the ground truth data collection was briefly explained. Finally, how the results will be validated was described. 
 
 The next Chapter (\S\ref{ch:results}) will present the data and laboratory measurements available to date, along with the final results. These results include the \gls{mobelm} atmospheric correction applied to Landsat 8 imagery, and concentration of CPA maps obtained from the developed retrieval.
