--- a/Thesis_PhD.tex
+++ b/Thesis_PhD.tex
@@ -1,5 +1,5 @@
 % \documentclass[draft]{book}
-\documentclass[]{book}
+\documentclass[draft]{book}
 
 \usepackage{graphicx}
 
@@ -362,11 +362,12 @@ Therefore, this study shows that the Landsat 8 satellite can be utilized over Ca
 % \addcontentsline{toc}{chapter}{Dedication}
 
 \centering
-Dedicated to (Dedicado a):\\
+Dedicado a (Dedicated to):\\
 \vspace{7cm}
-Mis amados viejitos,\\ Osvaldo Concha Silva\\ and (y) \\ Nelly del Carmen Sep\'ulveda Reyes...
+Mis amados viejitos (My dear parents),\\ Osvaldo Concha Silva\\ y (and) \\ Nelly del Carmen Sep\'ulveda Reyes...
 
 \end{dedication}
+
 
 \tableofcontents
 % \addcontentsline{toc}{chapter}{Contents}
