--- a/Summary.tex
+++ b/Summary.tex
@@ -3,40 +3,41 @@
 %% CHAPTER
 \chapter{Conclusions and Future Work}
 \label{ch:conc_future}
-This chapter includes a summary of this research, some discussions about the used methodology, the limitations of the used approach, the derived conclusions from the results and where this work could be taken as future work. The conclusions are separated into the main outcomes of this work: the MoB-ELM algorithm, and the retrieval of CPAs.
-
 % ------------------------------
 \section{Conclusions}
 \label{sec:conc}
+This chapter includes a summary of this research, some discussions about the methodology used, the limitations of the approach used, the conclusions derived from the results and where this work could be taken as future work. The conclusions are separated into the main outcomes of this work: the MoB-ELM algorithm, and the retrieval of CPAs.
+
+
 % ------------------------------
 \subsection{MoB-ELM}
-Applying the atmospheric correction algorithms based on \cite{Gordon:1994} to the Landsat 8 imagery could present some limitations such a noisy product when using the \gls{swir} bands over highly turbid waters with water-leaving signal in the \gls{nir}. The \gls{mobelm} atmospheric correction algorithm \cite{Concha2014SPIE} was developed as an alternative to overcome these limitations. Also, the MoB-ELM algorithm is not exclusive for Landsat 8 imagery. It could be applied to any type of sensor.
+Applying the atmospheric correction algorithms based on \cite{Gordon:1994} to the Landsat 8 imagery could present some limitations such as noisy product when using the \gls{swir} bands over highly turbid waters with water-leaving signal in the \gls{nir}. The \gls{mobelm} atmospheric correction algorithm \cite{Concha2014SPIE} was developed as an alternative to overcome these limitations. Also, the MoB-ELM algorithm is not exclusive for Landsat 8 imagery. It could be applied to any type of sensor.
 
 The \gls{mobelm} algorithm tries to avoid the use of field reflectance ground-truth as commonly used in the traditional \gls{elm} method. However, it is recommended to use the \gls{elm} whenever possible, i.e. when {\it in situ} information about the bright and dark target is available. As a review, in the MoB-ELM, the bright pixel is obtained from either the Landsat reflectance product over a bright target in the scene or from an Ecolight run simulating a water body with high concentration of CPAs in the scene. The dark pixel is obtained from an Ecolight run simulating a water body with low concentration of CPAs present in the scene. This algorithm does not require zero water signal in the NIR bands, so it could be applied to highly turbid waters. This algorithm assumes that the atmosphere is the same over the area of study.
 
 % Results from MoB-ELM
-The MoB-ELM algorithm was applied to {three \todo{three?}} Landsat 8 images in order to apply the retrieval algorithm. Although, only the \gls{rrs} results from the 2013 image were compared with {\it in situ} data for validation. First, the results were compared with the traditional \gls{elm} algorithm using the ground-truth data for the dark and bright pixel. This comparison included the spectra of four site in the scene. The difference is less than one percent reflectance unit. 
+The MoB-ELM algorithm was applied to {three \todo{three?}} Landsat 8 images in order to test the retrieval algorithm. Although, only the \gls{rrs} results from the 2013 image were compared with {\it in situ} data for validation. First, the results were compared with the traditional \gls{elm} algorithm using the ground-truth data for the dark and bright pixel. This comparison included the spectra of four sites in the scene. The difference is less than one reflectance unit (i.e. one percentage point). 
 
 % ----- added From SPIE SD
 % \subsection{Comparison with Standard Algorithms}
-For further validation, the \gls{mobelm} algorithm was compared with three algorithms based on the NASA's standard algorithms based on the methods developed by \cite{Gordon:1994}. The \gls{rrs} retrieved from these atmospheric correction algorithms were compared against each other. There are better agreements in band 3 and 4 than in bands 1 and 2 for all algorithms, which can be concluded from the RMSE values(\autoref{tab:Sites}). Also, the spectral \gls{rrs} from all four algorithms were compared with coincident {\it in situ} data. This comparison showed that the \gls{mobelm} algorithm perform the best overall.  When compared with {\it in situ} data, the MoB-ELM and Gordon and Wang's algorithm from SeaDAS (SeaDAS-SWIR) show similar results for all bands (\autoref{fig:NRMSE130919_RRS}). The results from the Gordon and Wang's algorithm from Acolite (Acolite-SWIR) shows the largest disagreement (\autoref{fig:NRMSE130919_RRS}). Then, the \gls{nrmse} for each band was calculated using the {\it in situ} data from the 09-19-2013 scene. Again, the \gls{mobelm} algorithm performs the best overall. \todo{include rest of the images in the NRMSE calculation for Rrs}.
+For further validation, the \gls{mobelm} algorithm was compared with three algorithms utilizing the NASA's standard algorithms based on the methods developed by \cite{Gordon:1994}. The \gls{rrs} retrieved from these atmospheric correction algorithms were compared against each other. There are better agreements in band 3 and 4 than in bands 1 and 2 for all algorithms, which can be concluded from the RMSE values (\autoref{tab:Sites}). Also, the spectral \gls{rrs} from all four algorithms were compared with coincident {\it in situ} data. This comparison showed that the \gls{mobelm} algorithm perform the best overall.  When compared with {\it in situ} data, the MoB-ELM and Gordon and Wang's algorithm from SeaDAS (SeaDAS-SWIR) show similar results for all bands (\autoref{fig:NRMSE130919_RRS}). The results from the Gordon and Wang's algorithm from Acolite (Acolite-SWIR) shows the largest disagreement (\autoref{fig:NRMSE130919_RRS}). Then, the \gls{nrmse} for each band was calculated using the {\it in situ} data from the 09-19-2013 scene. Again, the \gls{mobelm} algorithm performs the best overall. \todo{include rest of the images in the NRMSE calculation for Rrs}.
 
-The study of coastal water includes an extra signal not taken in account in the remote sensing of open ocean: adjacency effect product of the bright targets present the shoreline. This effect is not taken into account in the \cite{Gordon:1994} approach. However, it needs to be analyzed to know how much influence it could have in the sensor-reaching signal. Fortunately, the MoB-ELM algorithm inherently takes care of this signal since the reflectance values are taken at the surface and they represent ground-truth\todo{check!}.
+The study of coastal water includes an extra signal not taken into account in the remote sensing of the open ocean: adjacency effect product of the bright targets represented by the shoreline. This effect is not taken into account in the \cite{Gordon:1994} approach. However, it needs to be analyzed to know how much influence it could have in the sensor-reaching signal. Fortunately, the MoB-ELM algorithm inherently takes care of this signal since the reflectance values are taken at the surface and they represent ground-truth\todo{check!}.
 
 % Glint and adjacency effects were also not addressed in this work, and they could affect the atmospheric correction.
 
-The \gls{mobelm} forces the dark pixel to look like the Ecolight run, which could not be necessary true. This approach takes implicitly in account the uncertainties in the system by forcing the water pixels to look as the modeled pixels in Ecolight. One big inconvenience is the lack of knowledge of the scattering phase function, and that the data for the scattering coefficients were not updated.
+The \gls{mobelm} forces the dark pixel to look like the Ecolight run, which might not necessarily be true. This approach takes implicitly into account the uncertainties in the system by forcing the water pixels to look as the modeled pixels in Ecolight. One big inconvenience is the lack of knowledge of the scattering phase function, and that the data for the scattering coefficients were not updated. This method also needs to know the expected CPAs at at least one location, which is not always possible.
 
 % ------------------------------
 \subsection{Spectral-Matching and LUT retrieval}
-The NASA's standard empirical algorithms (\S\ref{subsec:chlempirical}) for the retrieval of chlorophyll-{\it a} based on band ratios were developed mainly for Case 1 waters, where the main driver is chlorophyll-{\it a}. The {\it in situ} data used to develop these algorithms does not appear to contain enough data for high concentration of \gls{cpas} (chlorophyll-{\it a}, minerals (or total suspended matter or TSS), and colored dissolved organic matter (CDOM)), and therefore these data are not fully representative of Case 2 waters. This research demonstrated the limitations of these algorithms over cases not represented in the dataset used to develop them. As a solution to this problem, the developed retrieval algorithm was designed for the simultaneous retrieval of color producing agents (CPAs) based on spectral matching and a look-up table (LUT) created in Ecolight using OLI data. This approach does not depend on a global {\it in situ} dataset. Instead it builds a LUT specific to the inherent optical properties (IOPs) and observation conditions for the site. An advantage of this retrieval algorithm is that it retrieves simultaneously all three CPAs.
+The NASA's standard empirical algorithms (\S\ref{subsec:chlempirical}) for the retrieval of chlorophyll-{\it a} based on band ratios were developed mainly for Case 1 waters, where the main driver is chlorophyll-{\it a}. The {\it in situ} data used to develop these algorithms does not appear to contain enough data for high concentration of \gls{cpas} (chlorophyll-{\it a}, minerals (or total suspended matter or TSS), and colored dissolved organic matter (CDOM)), and therefore these data are not fully representative of Case 2 waters. This research demonstrated the limitations of these algorithms over cases not represented in the dataset used to develop them. As a solution to this problem, the developed retrieval algorithm was designed for the simultaneous retrieval of color producing agents (CPAs) based on spectral matching and a look-up table (LUT) created in Ecolight using OLI data. This approach does not depend on a global {\it in situ} dataset. Instead it builds a LUT specific to the inherent optical properties (IOPs) and observation conditions for the site. An advantage of this retrieval algorithm is that it retrieves simultaneously all three CPAs. On the other hand, some knowledge of the IOPs expected in the waters under study are required.
 
 % copied from RS of Env. paper
 The developed retrieval process was applied to three \todo{tree?} Landsat 8 scenes over the same study area and compared with field measurements. Maps of CPA concentrations show the expected trends of low concentration in the lake and higher concentration in the ponds.  
 
-The retrieval was validated with ground-truth data taken at the same time as the satellite overpass. The $R^2$ value of the regression for all CPAs showed a high correlation ($R^2\geq0.89$). The \gls{nrmse} was calculated using the {\it in situ} data from 2013 and 2014 scenes. The \gls{nrmse} are approximately $10\%$ for $C_a$ and $TSS$, and about $5\%$ for $a_{CDOM}(440nm)$ \cite{Gerace:2013}. The comparison with field measurements exhibit error comparable with previous performance predictions for Landsat 8. These retrieval results are promising for the use of Landsat 8 for monitoring of coastal and inland waters showing good quantitative agreement across a very wide range of concentrations.
+The retrieval was validated with ground-truth data taken at the same time as the satellite overpass. The $R^2$ value of the regression for all CPAs showed a high correlation ($R^2\geq0.89$). The \gls{nrmse} was calculated using the {\it in situ} data from the 2013 and 2014 scenes. The \gls{nrmse} are approximately $10\%$ for $C_a$ and $TSS$, and about $5\%$ for $a_{CDOM}(440nm)$. The comparison with field measurements exhibit error comparable with previous performance predictions for Landsat 8 \cite{Gerace:2013}. These retrieval results are promising for the use of Landsat 8 for monitoring of coastal and inland waters showing good quantitative agreement across a very wide range of concentrations.
 
-The next step was to compare the developed retrieval algorithm with the standard algorithms. The \gls{oc3} algorithm was applied to results from the SeaDAS-SWIR, Acolite-SWIR and SeaDAS-MUMM atmospheric correction algorithms in order to retrieve chlorophyll-{\it a} concentrations ($C_a$). The $C_a$ maps (\autoref{fig:chlor_amaps}) exhibit similar results in the lake, but large disagreement in the ponds. Furthermore, all these four retrievals are compared among them through scatter plots and a week correlation is found (\autoref{fig:13262Chlor})). When the retrieved $C_a$ from the \gls{oc3} algorithm and the developed retrieval are compared with {\it in situ}, the results from the Concha and Schott's approach performed better than the rest of the algorithms, which is reflected in the \gls{nrmse} value (\autoref{fig:NRMSE130919CHL}). Again, this was expected since the ocean color algorithms were developed with the lack of {\it in situ} data representative of Case 2 waters with high concentration of color producing agents (CPAs).
+The next step was to compare the developed retrieval algorithm with the standard algorithms. The \gls{oc3} algorithm was applied to results from the SeaDAS-SWIR, Acolite-SWIR and SeaDAS-MUMM atmospheric correction algorithms in order to retrieve chlorophyll-{\it a} concentrations ($C_a$). The $C_a$ maps (\autoref{fig:chlor_amaps}) exhibit similar results in the lake, but large disagreement in the ponds. Furthermore, all these four retrievals are compared among them through scatter plots and a week correlation is found (\autoref{fig:13262Chlor})). When the retrieved $C_a$ from the \gls{oc3} algorithm and the developed retrieval are compared with {\it in situ} data, the results from the Concha and Schott approach performed better than the rest of the algorithms, which is reflected in the \gls{nrmse} value (\autoref{fig:NRMSE130919CHL}). Again, this was expected since the ocean color algorithms were developed with the lack of {\it in situ} data representative of Case 2 waters with high concentration of color producing agents (CPAs).
 
 % Practical applications  
 
@@ -44,20 +45,21 @@ The next step was to compare the developed retrieval algorithm with the standard
 
 % Limitations
 
-One of the limitation of the developed retrieval algorithm is that the \gls{mobelm} needs some knowledge of the water body (e.g. \gls{iops} and concentration of constituents at at least one point), which is often available but not always, and therefore, it will not work in every case because of the need for this knowledge. However, it is still a good answer for many cases where this knowledge is indeed available. Future work is aiming for an approach with good atmospheric correction without the need for ground-truth. For example, IOPs are often stable and could be estimated from previous studies (perhaps seasonally in some water bodies).
+One of the limitation of the developed retrieval algorithm is that the \gls{mobelm} needs some knowledge of the water body (e.g. \gls{iops} and concentration of constituents at at least one point), which is often available but not always, and therefore, it will not work in every case because of the need for this knowledge. However, it is still a good answer for many cases where this knowledge is indeed available. Future work is aiming for an approach with good atmospheric correction without the need for ground-truth. For example, IOPs are often stable and could be estimated from previous studies (perhaps seasonally in some water bodies) and CPAs of a local open water region may be predicted based on historical data if no concurrent data are available.
 
 Some pixels from the lake shoreline include signal from the bottom causing outliers in the retrieval results since the bottom reflectance was not accounted for in the process. The next version of this retrieval algorithm should address this issue. 
 
+One approach that was not tested in the research is using the results from the traditional \gls{elm}  or MoB-ELM \todo{MoB-ELM only?} algorithms as input to the standard NASA models and investigated whether the retrieval improves or not. On the other hand, the results from the \cite{Gordon:1994} algorithm could be used as input to the developed LUT-based inversion method and investigate if the results improve or not.
 % -------------------------------------
 \section{Future Work}
 \label{sec:futurework}
 % ------------------------------
 \subsection{More Data} 
-The presented work is a limited study using only a data set from just on site. The results need to be tested on a much larger set of data to see if the can be generalized. This implies that more {\it in situ} data need to be collected not only from the same area of study, but from other sites. Also, the uncertainties of the whole process need to be inferred.
+The presented work is a limited study using only a data set from just on site. The results need to be tested on a much larger set of data to see if the can be generalized. This implies that more {\it in situ} data need to be collected not only from the same area of study, but from other sites. Also, the uncertainties of the whole process need to be assessed.
 
 % ------------------------------
 \subsection{Algorithms Enhancement} 
-Some phenomena affecting the sensor-reaching signal were not included in this research. They could may or may not have a strong influence in the retrieval. A glint and adjacency effect correction could be included in the atmospheric correction, for example. The retrieval could be tested with and without these corrections to evaluate the sensitivity of them in the process.
+Some phenomena affecting the sensor-reaching signal were not included in this research. They may or may not have a strong influence in the retrieval. A glint and adjacency effect correction could be included in the atmospheric correction, for example. The retrieval could be tested with and without these corrections to evaluate the sensitivity to them of the process.
 
 % ------------------------------
 \subsection{Hydrodynamics models} 
@@ -69,23 +71,23 @@ With the lessons learned in this work, new features could be investigated to hel
 
 % ------------------------------
 \subsection{Algorithms Integration}
-This research utilized different softwares and programming languages (i.e. Matlab, ENVI/IDL, SeaDAS, Hydrolight and GNU/Linux) at the different stages and most of the process implies manual work for each image. In order to make it operational and more user-friendly, the process should be automatized in just one language and a \gls{gui} developed. A good choice of programming language could Python for its versatility and for being free. This improvement could allow for an easier time series studies.
+This research utilized different softwares and programming languages (i.e. Matlab, ENVI/IDL, SeaDAS, Hydrolight and GNU/Linux) at the different stages and most of the process requires manual work for each image. In order to make it operational and more user-friendly, the process should be automatized in just one language and a \gls{gui} developed. A good choice of programming language could be Python for its versatility and for being free. This improvement could allow for easier time series studies.
 
 % ------------------------------
-\subsection{In deep IOPs and AOPs analysis}
-A global application could be possible if the field-based library (LUT) is compressive enough. To accomplish this, a wider range of water bodies have to be included in the dataset. However, a more in deep analysis of how stable the IOPs of a certain region are over time is needed. 
+\subsection{In depth IOPs and AOPs analysis}
+A global application could be possible if the field-based library (LUT) is comprehensive enough. To accomplish this, a wider range of water bodies have to be included in the dataset. However, a more in depth analysis of how stable the IOPs of a certain region are over time is needed. 
 
-Also, more accurate information about scattering properties should be input to the Hydrolight in order to create the LUTs. An IOP-AOP inversion algorithm (semianalitics algorithm) could be utilized for this purpose since the only unknown is the \gls{b_boverb}, as described in \S\ref{subsec:semianalitic}.
+Also, more accurate information about scattering properties should be input to Hydrolight in order to create the LUTs. An IOP-AOP inversion algorithm (semianalitic algorithm) could be utilized for this purpose since the only unknown is the \gls{b_boverb}, as described in \S\ref{subsec:semianalitic}.
 
 % -------------------------------------
 \section{Concluding Remarks}
 The retrieval results demonstrated that for Case 2 waters, the solution for the ocean color measurements likely needs to be local and not global, as opposed to Case 1 waters. This local solution as implemented here, the combined MoB-ELM algorithm with Concha and Schott's $C_a$ retrieval algorithm, requires some knowledge of the waters to be studied, such as inherent optical properties (IOPs) and CPA concentration in at least one site.
 
-One approach that was not considered in this study is to apply different atmospheric algorithms based in the water type (Case 1 or Case 2). For example, to apply the NASA's standard algorithms to the lake (Case 1), and to apply to developed retrieval algorithm to the ponds (Case 2). An index could be created to differentiate between them.
+One approach that was not considered in this study is to apply different atmospheric algorithms based on the water type (Case 1 or Case 2). For example, to apply the NASA's standard algorithms to the lake (Case 1), and to apply the developed retrieval algorithm to the ponds (Case 2). An index could be created to differentiate between them.
 
 % Limitations
-One of the limitation of using Landsat 8 is its temporal resolution of 16-day, which does not allow for daily monitoring. Also, because this temporal resolution, the chance to get an image with clear weather conditions in the area of study is limited.
+One of the limitation of using Landsat 8 is its temporal resolution of 16-day, which does not allow for daily monitoring. Also, because of this temporal resolution, the chance to get an image with clear weather conditions in the area of study is limited.
 
-To date, there are no other sources of free access, open to the international science community, satellite imagery with similar spatial resolution or similar standard product (e.g. MODIS chl-a product) to compare with. Therefore, a direct comparison of results from our approach with typical algorithms over water bodies smaller than one kilometer is not possible. This is a challenge that needs to be addressed since there is a particular interest from local communities for monitoring water bodies that are not resolvable by current ocean color satellites. This is the case of the ponds included in this study, which are less than one kilometer in size. This fact makes Landsat 8 a pioneer in the retrieval of water quality parameters over medium to small water bodies. This also opens a need for more field measurement collection (i.e. IOPs, $R_{rs}$ and concentrations) on a regular basis where water quality needs to be assessed for the validation of products derived from moderate spatial resolution sensors such a Landsat 8 and the upcoming Sentinel 2. 
+To date, there are no other sources of free access, open to the international science community, satellite imagery with similar spatial resolution or similar standard product (e.g. MODIS chl-{\it a} product) to compare with. Therefore, a direct comparison of results from our approach with typical algorithms over water bodies smaller than one kilometer is not possible. This is a challenge that needs to be addressed since there is a particular interest from local communities for monitoring water bodies that are not resolvable by current ocean color satellites. This is the case of the ponds included in this study, which are less than one kilometer in size. This fact makes Landsat 8 a pioneer in the retrieval of water quality parameters over medium to small water bodies. This also opens a need for more field measurement collection (i.e. IOPs, $R_{rs}$ and concentrations) on a regular basis where water quality needs to be assessed for the validation of products derived from moderate spatial resolution sensors such a Landsat 8 and the upcoming Sentinel 2. 
 
-Finally, this work demonstrate the feasibility of using Landsat-like sensors for the monitoring of coastal and inland water, preparing the way for future mission, such a Landsat 9, Landsat 10, and Sentinel 2. The future of ocean color is in the coastal zones using high spatial resolution, and Landsat 8 is an step forward through this goal.
+Finally, this work demonstrated the feasibility of using Landsat-like sensors for the monitoring of coastal and inland water, preparing the way for future mission, such a Landsat 9, Landsat 10, and Sentinel 2. The future of ocean color is in the coastal zones using high spatial resolution, and Landsat 8 is a major step forward toward this goal.
